# bento_drs

./: .env-sample  .flake8  .gitignore  Dockerfile  MANIFEST.in  README.md  config.py  dev.Dockerfile  entrypoint.bash  entrypoint.dev.bash  pyproject.toml  requirements.txt  run.bash  run.dev.bash  setup.py  startup.sh  tox.ini  wsgi.py
.github/workflows/: build.yml  lint.yml  test.yml
bento_drs/: app.py  backend.py  commands.py  config.py  constants.py  data_sources.py  models.py  package.cfg  routes.py
bento_drs/backends/: local.py  minio.py
chord_drs/: __init__.py  app.py  authz.py  backend.py  backends.py  commands.py  config.py  constants.py  data_sources.py  db.py  logger.py  models.py  package.cfg  request.py  routes.py  serialization.py  types.py  utils.py  wsgi.py
chord_drs/backends/: base.py  local.py  minio.py  s3.py
chord_drs/migrations/versions/: 2dbb40967988_.py  4b4aaba9e448_add_object_mime_type_field.py  5d78bf559c57_.py  5e982af5cde4_remove_bundles.py  dcd501398d46_add_public_flag_to_drs_objects.py  e12d110bf938_add_bento_resource_information.py
migrations/versions/: 962205798d27_.py
tests/: conftest.py  constants.py  dummy_file.txt  s3_server_mock.py  test_backends.py  test_checksum.py  test_commands.py  test_mime.py  test_models.py  test_routes.py
