[tool.poetry]
name = "chord-drs"
version = "0.14.1"
description = "An implementation of a data repository system (as per GA4GH's specs) for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "chord_drs"}]
include = [
    "chord_drs/migrations/*",
    "chord_drs/migrations/**/*",
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = ">=1.34.6,<1.35"
bento-lib = {version = "^11.1.1", extras = ["flask"]}
flask = ">=2.2.5,<2.3"
flask-sqlalchemy = ">=3.0.5,<3.1"  # 3.1 drops SQLAlchemy 1 support
flask-migrate = ">=4.0.5,<4.1"
prometheus-flask-exporter = ">=0.23.0,<0.24"
python-dotenv = ">=1.0.0,<1.1"
sqlalchemy = ">=1.4.50,<1.5"
flask-cors = "^4.0.0"
werkzeug = "~2.2.3"  # werkzeug 2.3.x breaks debugpy, so manually keep it at 2.2.x
asgiref = "^3.7.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
moto = "^4.2.10"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
responses = "^0.22.0"
tox = "^4.11.4"
debugpy = "^1.8.0"
pytest-lazy-fixture = "^0.6.3"
sqlalchemy-stubs = "^0.4"
mypy = "^1.7.1"
types-flask-cors = "^4.0.0.2"
types-flask-migrate = "^4.0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
