[tool.poetry]
name = "chord-drs"
version = "0.17.0"
description = "An implementation of a data repository system (as per GA4GH's specs) for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "chord_drs"}]
include = [
    "chord_drs/migrations/*",
    "chord_drs/migrations/**/*",
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = ">=1.34.81,<1.35"
bento-lib = {version = "^11.9.0", extras = ["flask"]}
flask = ">=2.2.5,<2.3"
flask-sqlalchemy = ">=3.1.1,<3.2"
flask-migrate = ">=4.0.5,<4.1"
prometheus-flask-exporter = ">=0.23.0,<0.24"
python-dotenv = ">=1.0.0,<1.1"
sqlalchemy = ">=2.0.29,<2.1"
flask-cors = "^4.0.1"
werkzeug = "~2.2.3"  # werkzeug 2.3.x breaks debugpy, so manually keep it at 2.2.x
asgiref = "^3.7.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
moto = "^4.2.14"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
responses = "^0.25.0"
tox = "^4.12.1"
debugpy = "^1.8.1"
pytest-lazy-fixture = "^0.6.3"
sqlalchemy-stubs = "^0.4"
mypy = "^1.7.1"
types-flask-cors = "^4.0.0.2"
types-flask-migrate = "^4.0.0.7"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = "migrations"
