[tool.poetry]
name = "chord-drs"
version = "0.20.4"
description = "An implementation of a data repository system (as per GA4GH's specs) for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "chord_drs"}]
include = [
    "chord_drs/migrations/*",
    "chord_drs/migrations/**/*",
]

[tool.poetry.dependencies]
python = "^3.12"
aioboto3 = "^15.5.0"
bento-lib = {version = "^14.1.2", extras = ["flask"]}
flask = "~3.1.2"
flask-sqlalchemy = ">=3.1.1,<3.2"
flask-migrate = ">=4.1,<4.2"
prometheus-flask-exporter = ">=0.23.0,<0.24"
python-dotenv = "~1.2.1"
sqlalchemy = ">=2.0.29,<2.1"
flask-cors = "^6.0.0"
werkzeug = "~3.1.4"
asgiref = "^3.7.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.11.0"
moto = "^5.1.15"
pytest = "^7.4.4"  # 8.x not supported by pytest-lazy-fixture
pytest-asyncio = "~0.23.8"  # last version supporting pytest 7.x
pytest-cov = "^7.0.0"
pytest-dotenv = "^0.5.2"
responses = "^0.25.0"
tox = "^4.33.0"
debugpy = "^1.8.19"
pytest-lazy-fixture = "^0.6.3"
sqlalchemy-stubs = "^0.4"
mypy = "~1.19.1"
types-flask-cors = "^6.0.0.20250809"
types-flask-migrate = "^4.1.0.20250809"
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["wsgi.py", "chord_drs/migrations"]

# Custom pytest plugin to mock an S3 server
# pytest uses the "pytest11" entrypoint to lookup plugins
# https://docs.pytest.org/en/stable/how-to/writing_plugins.html
[tool.poetry.plugins."pytest11"]
s3_server_mock = 'tests.s3_server_mock'
